style.css
body {
    position: relative;
}

::selection {
    background: hsla(30, 100%, 50%, 1); /* WebKit/Blink Browsers */
    color: #ffffff;
}

::-moz-selection {
    background: hsla(30, 100%, 50%, 1); /* Gecko Browsers */
    color: #ffffff;
}

img {
    max-width: 100%;
    height:auto;
}

hr {
    width: 80%;
}

.background {
    background-color: hsla(0, 0%, 5%, 1);
}

a:hover {
    color: hsla(30, 100%, 65%, 1);
    fill: hsla(30, 100%, 65%, 1);
    text-decoration: none;
}

.heading > span {
    border-bottom: 3px solid hsla(30, 100%, 50%, 1);
    padding-bottom: 6px !important;
    line-height: 50px;
}

.container-fluid h1, h2, h3, h4, h5, h6, p {
    margin-left: 1.8rem;
    margin-right: 1.8rem;
}

#AboutMe, #Experience, #Education, #Skills, #Portfolio {
    min-height: 50vh;
}


/* Navbar */

.active {
    border: 3px hsla(30, 100%, 50%, 1) solid !important;
}

li.nav-item:hover > a {
    border-bottom: 3px hsla(30, 100%, 50%, 1) solid;
}

.navbar-nav > li > a {
  border-top: 3px hsla(0, 0%, 5%, 1) solid;
}

.navbar-a a{
    color: hsla(0, 100%, 100%, 1) !important;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.25rem;
    padding: 0.5rem 3.5rem !important;
}


/* Home */

#home hr {
    border-color: hsla(0, 100%, 100%, 1);
    width: 80%;
}

.hero {
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.95);
  background-blend-mode: multiply;
  background-attachment: fixed;
  height: 100vh;
  width: 100%;
}

.inner-text {
  font-family: 'Roboto', sans-serif;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  font-size: 50px;
}

@media only screen and (min-width: 320px) {
  .inner-text {
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media only screen and (min-width: 400px) {
  .inner-text {
    padding-left: 40px;
    padding-right: 40px;
  }
}

@media only screen and (min-width: 680px) {
  .inner-text {
    font-size: 75px;
  }
}

@media only screen and (min-width: 950px) {
  .inner-text {
    font-size: 100px;
  }
}

.inner-text > a {
  text-decoration: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.name {
  color: #ffffff;
  display: block;
  font-size: 6rem;
  font-weight: 900;
  margin: 0;
  line-height: 1;
}

@media only screen and (max-width: 480px) {
  .name {
    font-size: 4rem;
    position: relative;
    top: 0.6rem;
  }
}

.name > span {
  font-weight: 100;
  margin: 0;
  line-height: 1;
  color: #f87000;
}

.job-title {
  display: block;
  font-size: 2.4rem;
  font-weight: 900;
  margin: 0;
  line-height: 2;
  color: #f87000;
}

@media only screen and (max-width: 480px) {
  .job-title {
    font-size: 1.8rem;
    position: relative;
    margin-top: 20px;
    margin-bottom: 10px;
    top: 0.6rem;
  }
}

.job-title > span {
  font-weight: 100;
  margin: 0;
  line-height: 2;
  color: #fff;
}

@media only screen and (max-width: 480px) {
  .job-title > span {
    margin-top: 20px;
    margin-bottom: 10px;
  }
}

.intro {
  display: block;
  font-family: Oswald, cursive;
  font-size: 1.4rem;
  font-weight: 0;
  margin: 0.8rem;
  line-height: 1;
  color: #f87000;
}

@media only screen and (max-width: 480px) {
  .intro {
    font-size: 1.2rem;
    position: relative;
    margin-top: 20px;
    margin-bottom: 10px;
    top: 0.6rem;
  }
}

.hero-down {
  position: absolute;
  top: 90vh;
  font-size: 2em;
  height: 2em;
  width: 4rem;
  color: #f5f5f5;
  border-radius: 100%;
}

.hero-down:hover {
  color: #000000;
  background-color: #ffffff;
  border-radius: 50px;
}

.hero-down i {
  vertical-align: bottom;
  position: relative;
  top: 0.1rem;
}

.white {
  color: #fff;
}

.social-icons-row {
  margin: 0px auto;
  width: 100%;
}

.social-icons-row i {
  border-radius: 3px;
  cursor: pointer;
  font-size: 2.9rem;
  color: #fff;
  margin: 0px 20px;
  padding: 20px 30px;
  transition: all 500ms ease-in-out;
  -webkit-transition: all 500ms ease-in-out;
}

@media only screen and (max-width: 550px) {
  .social-icons-row i {
    padding: 10px 10px;
    margin: 20px 10px;
    font-size: 2.5rem;
  }
}

@media only screen and (max-width: 550px) {
  .fab {
    font-size: 0.8rem;
  }
}

.social-icons-row i:hover {
  background: #fff;
}

.fa-codepen:hover {
  color: #1e1e26;
}

.fa-github:hover {
  color: #24292d;
}

.fa-linkedin-in:hover {
  color: #007bb5;
}

.codecademy > svg {
  fill: #fff;
  width: 3.2rem;
  position: relative;
  top: -3px;
}

.codecademy:hover > svg {
  fill: #0e1234;
}

.fa-chevron-up {
  color: #fff;
}


/* Skills */

.progress, .progress-bar {
    height: 1.75rem;
}

.progress-orange {
    background-color: hsla(30, 100%, 50%, 1);
}

#html:hover > div > h4 > i {
    color: #dd4b24;
}

#css:hover > div > h4 > i {
    color: #254bdc;
}

#grav:hover > div > h4 > i {
    color: #211d1e;
    background-color: #f7f7f7;
    border-radius: 10px;
}

#php:hover > div > h4 > i {
    background-color: #6b7cb0;
    border-radius: 59px / 50px;
    height: 23px;
}

#php > div > h4 > i {
    font-size: 1.6rem;
}

#js:hover > div > h4 > i {
    color: #e8d44d;
}

#nodejs:hover > div > h4 > i {
    color: #6d9c68;
}

#reactjs:hover > div > h4 > i {
    color: #00d2f7;
}

#python:hover > div > h4 > i {
    background: -webkit-linear-gradient(-60deg, #366a99 50%, #f8ca40 50%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

#adobe:hover > div > h4 > i {
    color: #e71b24;
}

#mailchimp > div > h4 > i {
    padding-left: 3px;
}

#mailchimp:hover > div > h4 > i {
    background-color: #f7d919;
    border-radius: 4px;
    width: 26px;
}

#seo:hover > div > h4 > i {
    color: #38a656;
}

#git:hover > div > h4 > i {
    color: #e84d31;
}

.skill {
    text-decoration: none;
    color: #000000;
}

.skill:hover {
    text-decoration: none;
    color: #000000;
}


/* Qualifications */

.qualification {
  color: #fff;
  position: relative;
  overflow: hidden;
  margin: 10px;
  width: 250px;
  height: 350px;
  background-color: #ffffff;
  color: #000000;
  text-align: left;
  font-size: 16px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}
.qualification:hover {
    box-shadow: 0 0 35px rgba(0, 0, 0, 0.2);
}
.qualification * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
.qualification .image {
  max-height: 220px;
  overflow: hidden;
}
.qualification img {
  max-width: 100%;
  vertical-align: top;
  position: relative;
}
.qualification figcaption {
  margin: 0 15px 0;
  padding: 15px;
  position: relative;
  background-color: #ffffff;
}
.qualification .date {
  background-color: #ff7f00;
  top: 15px;
  color: #fff;
  left: 0;
  min-height: 48px;
  min-width: 48px;
  position: absolute;
  text-align: center;
  font-size: 18px;
  font-weight: 700;
  text-transform: uppercase;
}
.qualification .date span {
  display: block;
  line-height: 24px;
}
.qualification .date .month {
  font-size: 16px;
  background-color: rgba(0, 0, 0, 0.1);
}
.qualification h3,
.qualification p {
  margin: 0;
  padding: 0;
}
.qualification h3 {
  min-height: 50px;
  margin-bottom: 10px;
  margin-left: 45px;
  display: inline-block;
  font-weight: 600;
  font-size: 1rem;
}
.qualification h4 {
    margin-left: 0;
    font-size: 1rem;
}
.qualification p {
  font-size: 0.9em;
  margin-bottom: 20px;
  line-height: 1.6em;
}
.qualification a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  z-index: 1;
}


/* Portfolio */

.portfolio-hover button:hover {
    background-color: hsla(30, 100%, 65%, 1);
}


/* Footer */

footer {
    min-height: 6rem;
    max-height: 100%;
}

